TestRepo2/src/objects/Gold_Standard_Met__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gold Standards Met</relationshipLabel>
        <relationshipName>Gold_Standards_Met</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BrandBottle_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional relationship - use only for sub brands ie. Smirnoff flavors</inlineHelpText>
        <label>BrandBottle Size</label>
        <referenceTo>BrandBottle_Size__c</referenceTo>
        <relationshipLabel>Gold Standards Met</relationshipLabel>
        <relationshipName>Gold_Standards_Met</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Gold Standards Met</relationshipLabel>
        <relationshipName>Gold_Standards_Met</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_Display_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Brand does not have a Display, this field is checked and is propagated from the layout objects.</description>
        <inlineHelpText>If Brand does not have a Display, this field is checked and is propagated from the layout objects.</inlineHelpText>
        <label>Gold Standard Display Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_for_Display_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_for_Display__c</fullName>
        <formula>Brand__r.Gold_Standard_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gold Standard for Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_for_Distribution_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_for_Distribution__c</fullName>
        <formula>Brand__r.Gold_Standard_Distribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gold Standard for Distribution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_for_Shelf_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shelf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_for_Shelf__c</fullName>
        <formula>Brand__r.Gold_Standard_Shelf__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gold Standard for Shelf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Gold Standards Met</relationshipLabel>
        <relationshipName>Gold_Standards_Met</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gold Standard Met</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Brand__c</columns>
        <columns>Gold_Standard_for_Distribution__c</columns>
        <columns>Gold_Standard_for_Distribution_Met__c</columns>
        <columns>Gold_Standard_for_Display__c</columns>
        <columns>Gold_Standard_for_Display_Met__c</columns>
        <columns>Gold_Standard_for_Shelf__c</columns>
        <columns>Gold_Standard_for_Shelf_Met__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GS-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Gold Standard</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gold Standards Met</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>